# voice2text-vietnamese

./: docker-compose.yml
backend/: .coverage  .gitignore  Dockerfile  README.md  alembic.ini  download_model.py  main.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20251208_0106-6d0c8a38996c_initial_schema_with_transcription_logs_.py
backend/app/: main.py
backend/app/api/: deps.py  endpoints.py  openapi_examples.py
backend/app/api/middleware/: __init__.py  cors.py  error_handler.py  logging.py
backend/app/api/routes/: __init__.py  health.py  history.py  models.py  moderation.py
backend/app/api/websockets/: __init__.py  handlers.py  transcription.py
backend/app/application/dtos/: __init__.py  requests.py  responses.py
backend/app/application/interfaces/: __init__.py  cache.py  workers.py
backend/app/application/services/: __init__.py  audio_service.py  notification_service.py  session_service.py
backend/app/application/use_cases/: __init__.py  delete_history.py  get_history.py  model_management.py  moderate_content.py  transcribe_audio.py
backend/app/core/: config.py  database.py  errors.py  manager.py
backend/app/domain/entities/: __init__.py  moderation_result.py  session.py  transcription.py
backend/app/domain/exceptions/: __init__.py  base.py  business_rule.py  entity_not_found.py  repository.py  validation.py  worker.py
backend/app/domain/repositories/: __init__.py  session_repository.py  transcription_repository.py
backend/app/domain/services/: __init__.py
backend/app/domain/value_objects/: __init__.py  audio_data.py  confidence_score.py  model_config.py
backend/app/infrastructure/cache/: __init__.py  redis_cache.py
backend/app/infrastructure/config/: __init__.py  container.py  settings.py
backend/app/infrastructure/database/: __init__.py  connection.py  models.py
backend/app/infrastructure/notifications/: __init__.py  websocket_handler.py
backend/app/infrastructure/workers/: __init__.py  base_worker.py  span_detector_worker.py  worker_manager.py  zipformer_worker.py
backend/app/models/: protocols.py  schema.py
backend/app/workers/: __init__.py  base.py  hate_detector.py  hkab.py  span_detector.py  whisper.py  zipformer.py
backend/scripts/: check_zipformer_streaming.py  debug_zipformer_online.py  export_hkab_onnx.py  inspect_jit.py  inspect_onnx.py  setup_models.py  test_db.py  test_model_load.py
backend/tests/: conftest.py  test_api.py  test_container_wiring.py  test_full_system.py  test_rfc_compliance.py  test_websocket.py  test_workers.py
backend/tests/benchmark/: benchmark_results.txt  test_comprehensive.py  test_detector_benchmark.py  test_latency.py
backend/tests/e2e/: test_real_zipformer.py
backend/tests/integration/: test_endpoints.py  test_health_routes.py  test_moderation_integration.py  test_use_case_repository_integration.py  test_use_case_worker_integration.py  test_websocket_transcription.py
backend/tests/unit/: test_hate_detector.py  test_manager.py  test_span_detector.py  test_whisper_worker.py  test_zipformer_worker.py
backend/tests/unit/api/: test_deps.py
backend/tests/unit/application/: test_audio_service.py  test_delete_history_use_case.py  test_get_history_use_case.py  test_interfaces.py  test_model_management_use_case.py  test_moderate_content_use_case.py  test_notification_service.py  test_request_dtos.py  test_response_dtos.py  test_session_service.py  (+1 more)
docs/: contract-api.md  (+6 more)
(+132 files in other folders)
