[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "voice2text-vietnamese-backend"
version = "2.0.0-alpha"
description = "Real-time Vietnamese speech-to-text application with hate speech detection"
authors = ["Voice2Text Team"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.12"
# Core Framework
fastapi = ">=0.115.0"
uvicorn = {extras = ["standard"], version = ">=0.32.0"}
pydantic-settings = ">=2.6.0"

# Database
sqlmodel = ">=0.0.22"
sqlalchemy = {extras = ["asyncio"], version = ">=2.0.0"}
aiosqlite = ">=0.20.0"
alembic = "^1.13.0"

# Dependency Injection
dependency-injector = "^4.41.0"

# AI Models - Zipformer STT
sherpa-onnx = ">=1.10.0"

# AI Models - ViSoBERT-HSD (Hate Speech Detection)
transformers = ">=4.35.0"
safetensors = ">=0.4.0"
optimum = {extras = ["onnxruntime"], version = ">=1.14.0"}
onnxruntime = ">=1.16.0"

# Audio Processing
numpy = ">=1.26.0"
soundfile = ">=0.12.0"

# Utilities
python-multipart = "*"
python-dotenv = "*"
websockets = "*"

# Logging & Monitoring
structlog = "^24.1.0"
prometheus-client = "^0.19.0"

# Caching (Optional)
redis = {version = "^5.0.0", optional = true}

[tool.poetry.group.dev.dependencies]
# Testing
pytest = "^8.2.0"
pytest-asyncio = "^0.21.0"
pytest-mock = "^3.10.0"
pytest-cov = "^4.1.0"
httpx = ">=0.27.0"

# Code Quality
black = "^24.1.0"
flake8 = "^7.0.0"
mypy = "^1.8.0"
isort = "^5.13.0"

# Development Tools
ipython = "^8.20.0"
ipdb = "^0.13.13"

[tool.poetry.extras]
redis = ["redis"]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | env
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "e2e: marks tests as end-to-end tests",
    "benchmark: marks tests as benchmark tests",
]

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/env/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"
